test/classes/initializers/user_def_unique_initializer_const_multipleassign2.chpl


class C {
  const x: int;

  proc init(y, z) {
    x = y + z;
    x = 1;

  }
}

var c = new owned C(2, 3);

writeln(c.x);
